--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <header>
         <h1>Trabajo Colaborativo</h1>
+        <h1>trabajo corporativo</h1>
+        <h1>trabajo en equipo </h1>
     </header>
     <main>
         <section>
